--- a/src/css/components/Hero.css
+++ b/src/css/components/Hero.css
@@ -12,10 +12,10 @@
   display: block;
   width: 70%;
   max-height: 90vh;
-  max-width: 1000px;
+  max-width: 800px;
   height: auto;
-  box-shadow: 0 0 12px rgba(0,0,0,0.3);
-  /* transform: rotateY(180deg); */
+  box-shadow: 0 0 12px rgba(0,0,0,.3);
+  object-fit: contain;
 }
 
 @media (max-width: var(--large)) {
